# MultiLot360-Web

./: .dockerignore  .gitignore  Dockerfile  README.md  package.json
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml
apps/desktop/: package.json
apps/desktop/src/: index.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.ts  package.json
apps/web/public/: manifest.webmanifest
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(auth)/: error.tsx
apps/web/src/components/layout/: app-logo.tsx  app-sidebar.tsx  app-topbar.tsx  mobile-navigation.tsx  navigation-icon.tsx  placeholder-page.tsx  user-menu.tsx
apps/web/src/components/theme/: theme-provider.tsx  theme-toggle.tsx
apps/web/src/components/ui/: button.tsx  chart.tsx  data-pagination.tsx  data-pagination.utils.test.ts  data-pagination.utils.ts  entity-combobox.tsx  (+7 more)
apps/web/src/config/: env.ts  navigation.ts  routes.ts
apps/web/src/lib/: query-client.ts  query-server.ts
apps/web/src/types/: bynana-ui.d.ts
docs/: api-consumption-audit.md  ci-cd.md  desktop-installers.md  dokploy-deployment.md  draws-module.md  draws-qa-report.md  frontend-authentication.md  gitflow-and-delivery.md  number-control-module.md  number-control-qa-report.md  sales-module.md  sales-qa-report.md  sellers-module.md  sellers-qa-report.md
(+361 files in other folders)
