[package]
name = "multilot-360-desktop"
version = "0.1.0"
description = "Cliente de escritorio de MultiLot 360"
authors = ["MultiLot 360"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.81"
build = "build.rs"

[lib]
name = "multilot_360_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
url = "2"
